...
      },
      home: {
        tabTitle: "Home",
        title: "Hi {{username}}",
        recentlyPlayed: "Recently played",
...
      },
      library: {
        title: "Library",
        searchPlaceholder: "Search your library",
        recentSort: "Recent",
        alphabeticalSort: "Alphabetical",
        artistSort: "Artist",
...
      },
      create: {
        title: "Create",
        playlistTitle: "Playlist",
        playlistDescription: "Create a playlist with songs",
        smartPlaylistTitle: "Smart playlist",
        smartPlaylistDescription:
...
        random: "Random",
        library: "Library",
        playlists: "Playlists",
        albums: "Albums",
        podcasts: "Podcasts",
...
      },
      albums: {
        addToPlaylist: "Add to playlist",
        playNext: "Play next",
        addToQueue: "Add to queue",
        goToArtist: "Go to artist",
        rate: "Rate",
        share: "Share",
        musicBrainz: "Open in MusicBrainz",
        lastFM: "Open in Last.fm",
        moreFromArtist: "More from {{artist}}",
...
        label: "Artist",
        coverAlt: "Artist cover",
        topSongs: "Top songs",
        discography: "Discography",
        appearsOn: "Appears on",
...
        edit: "Edit this playlist",
        editRules: "Edit smart playlist rules",
        delete: "Delete this playlist",
        share: "Share",
        playNext: "Play next",
        addToQueue: "Add to queue",
        deletePlaylistConfirmTitle:
          "Are you sure you want to delete this playlist?",
        deletePlaylistConfirmDescription:
          "Deleting this playlist will remove it permanently and cannot be undone. Please confirm if you want to proceed.",
...
          "An error occurred while removing the track from the playlist",
        addToPlaylistTitle: "Add to playlist",
        newPlaylist: "New playlist",
        finished: "Finished",
        addTrackSuccessMessage_one: "Song successfully added to playlist",
        addTrackSuccessMessage_other: "Songs successfully added to playlist",
...
      },
      newPlaylist: {
        title: "Give a name to your playlist",
        newPlaylistSuccessMessage: "Playlist successfully created",
        newPlaylistErrorMessage:
          "An error occurred while creating the playlist",
        namePlaceholder: "My awesome playlist",
      },
      profile: {
...
          stream: "Stream",
          jukebox: "Jukebox",
          download: "Download",
          upload: "Upload",
          playlist: "Playlist",
...
        byCountry: "From your country",
        byTag: "{{tag}}",
        addToFavorites: "Add to favorites",
        removeFromFavorites: "Remove from favorites",
        addToFavoritesSuccessMessage: "Radio station added to favorites",
...
      },
      queue: {
        title: "Queue",
        empty: "The queue is empty.",
        edit: "Edit",
...
        addToFavorites: "Add to favorites",
        addToPlaylist: "Add to playlist",
        addToAnotherPlaylist: "Add to another playlist",
        removeFromPlaylist: "Remove from playlist",
        playNext: "Play next",
        addToQueue: "Add to queue",
        goToArtist: "Go to artist",
        goToArtist_one: "Go to artist",
        goToArtist_other: "Go to artists",
        goToAlbum: "Go to album",
        rate: "Rate",
        share: "Share",
        getInfo: "Get info",
        download: "Download",
        musicBrainz: "Open in MusicBrainz",
        showCredits: "Show track credits",
        similarSongs: "Similar songs",
        similarSongsTitle: "Tracks similar to: {{title}}",
        trackInfoModalTitle: "Track info",
        rateModalTitle: "Rate track",
        creditsModalTitle: "Track credits",
        creditsModal: {
          albumArtist: "Album artist",
          composer: "Composer",
        },
        favoriteSuccessMessage: "Track successfully added to favorites",
        favoriteErrorMessage:
          "An error occurred while adding track to favorites",
...
        shareSuccessMessage: "Track successfully shared",
        shareErrorMessage: "An error occurred while sharing the track",
        downloadSuccessMessage: "Track successfully downloaded",
        downloadErrorMessage: "An error occurred while downloading the track",
        downloadForOffline: "Save for offline listening",
        downloadingForOffline: "Downloading for offline",
        removeOfflineDownload: "Remove offline download",
        offlineDownloadSuccessMessage:
          "Track successfully downloaded for offline use",
...
        removeOfflineDownloadErrorMessage:
          "An error occurred while removing track from offline downloads",
        rateSuccessMessage: "Rating successfully set",
        rateErrorMessage: "An error occurred while setting the rating",
        infoModal: {
...
        close: "Close",
        create: "Create",
        delete: "Delete",
        clear: "Clear",
        search: "Search",
...
        song_one: "Song",
        song_other: "Songs",
        save: "Save",
        seeMore: "See more",
        seeLess: "See less",
...
        rateSuccessMessage: "Rating successfully set",
        rateErrorMessage: "An error occurred while setting the rating",
        shareUrlCopiedMessage: "Share url copied to clipboard",
        shareUrlErrorMessage:
          "An error occurred while copying the share url to the clipboard",
...
