...
          showsVerticalScrollIndicator={false}
          contentContainerStyle={{ alignItems: "center" }}
        >
          <Box className="p-6 w-full mb-12">
            <HStack className="items-center">
              <FadeOutScaleDown
                testID="share-copy-button"
                className="flex-row gap-x-4 items-center justify-between flex-1  overflow-hidden"
                onPress={handleCopyShareUrlPress}
              >
                {clipoardCopyDone ? (
                  <ClipboardCheck size={24} color={emerald500} />
                ) : (
...
        isOpen={showRatingModal}
        onClose={handleCloseRatingModal}
        title={t("app.tracks.rateModalTitle")}
        value={track?.userRating || 0}
        onConfirm={handleRatingChange}
        isPending={doSetRating.isPending}
        closeButtonTestID="track-rating-close-button"
      />
      <TrackInfoModal
        isOpen={showInfoModal}
        onClose={handleCloseInfoModal}
        track={track}
      />
...
          style={{ marginBottom: insets.bottom, marginTop: insets.top }}
        >
          <ModalHeader>
            <Heading className="text-white">
              {t("app.tracks.creditsModalTitle")}
            </Heading>
            <ModalCloseButton testID="track-credits-close-button">
              <Icon as={X} size="md" className="color-white" />
            </ModalCloseButton>
          </ModalHeader>
          <ModalBody className="mb-0 pb-0" showsVerticalScrollIndicator={false}>
            {track && (
              <VStack className="gap-y-2">
...
