...
        <VStack
          className={cn("flex-1", {
            "ml-4": showCoverArt,
          })}
        >
          <Heading
            testID="track-title"
            className={cn("text-white text-md font-normal mr-4", {
              "text-emerald-500": isCurrentTrack,
            })}
            numberOfLines={1}
          >
            {track.title}
...
            ) : (
              <Circle size={24} color={gray300} />
            )}
          </Box>
        ) : (
          <FadeOutScaleDown
            testID="track-menu-button"
            onPress={handlePresentModalPress}
            disabled={isUnavailableOffline}
            disabledOpacity={0.8}
          >
            <EllipsisVertical color={gray300} />
          </FadeOutScaleDown>
...
